add "Tomcat in Eclipse" notes